# AnotherSandbox

./: .env.example  .gitignore  Makefile  README.md  docker-compose.orchestrator.yml  docker-compose.workspace.yml.tmpl  docker-compose.yml
base/base-node24/: Dockerfile
base/base-os/: Dockerfile
base/base-python312/: Dockerfile
base/base-vnc/: Dockerfile
cap-agent/: Dockerfile  README.md  pyproject.toml
cap-agent/src/cap_agent/: __init__.py  main.py
cap-agent/src/cap_agent/core/: __init__.py  auth.py  config.py  exceptions.py
cap-agent/src/cap_agent/models/: actions.py
cap-agent/src/cap_agent/routers/: cdp.py  gui.py  health.py  shell.py
cap-agent/src/cap_agent/services/: __init__.py  audit_client.py  browser_cdp_client.py  gui_backend.py  terminal_client.py
cap-agent/tests/: __init__.py  conftest.py
cap-agent/tests/integration/: test_cdp_proxy.py  test_shell_proxy.py
cap-agent/tests/unit/: test_audit_client.py  test_auth.py  test_config.py  test_exceptions.py  test_gui_actions_model.py  test_gui_backend.py  test_gui_screenshot.py  test_health.py
cap-browser/: Dockerfile  entrypoint.sh  install_chromium.sh
cap-code/: Dockerfile
cap-jupyter/: Dockerfile
cap-mcp/: Dockerfile  README.md  pyproject.toml
cap-mcp/src/cap_mcp/: __init__.py  main.py  workspace_context.py
cap-mcp/src/cap_mcp/routers/: __init__.py  health.py
cap-mcp/src/cap_mcp/services/: audit_client.py
cap-mcp/src/cap_mcp/tools/: __init__.py  browser.py  desktop.py  fs.py  shell.py
cap-mcp/tests/: __init__.py  conftest.py
cap-mcp/tests/unit/: __init__.py  test_audit_client.py  test_health.py  test_tool_browser.py  test_tool_desktop.py  test_tool_fs.py  test_tool_shell.py  test_workspace_context.py
cap-nginx/: Dockerfile  README.md  nginx.conf  nginx.workspace.conf.tmpl  pyproject.toml
cap-nginx/tests/: test_routes.py  test_workspace_template.py
cap-terminal/: Dockerfile  README.md  pyproject.toml
cap-terminal/src/cap_terminal/: __init__.py  main.py  tmux_session.py
cap-terminal/src/cap_terminal/routers/: __init__.py  exec.py  health.py  status.py
cap-terminal/src/cap_terminal/services/: audit_client.py
cap-terminal/tests/: __init__.py  conftest.py
cap-terminal/tests/unit/: __init__.py  test_audit_client.py  test_exec.py  test_health.py  test_status.py  test_tmux_session.py
docs/: architecture.md  deployment.md  troubleshooting.md
launcher/: .gitignore  Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
launcher/nginx/: launcher.conf.tmpl  workspace-denied.html
launcher/src/: App.tsx  main.tsx
launcher/src/api/: audit.ts  auth.ts  client.ts  workspaces.ts
launcher/src/components/: AuditTable.tsx  StatusBadge.tsx  WorkspaceCard.tsx
launcher/src/components/ui/: badge.tsx  (+1 more)
launcher/src/hooks/: useSession.ts
launcher/src/lib/: utils.ts  workspace.ts
launcher/src/pages/: CreateWizard.tsx  Login.tsx  Monitor.tsx  Workspaces.tsx
launcher/src/types/: index.ts
launcher/tests/: setup.ts
launcher/tests/msw/: handlers.ts  server.ts
launcher/tests/unit/: CreateWizard.test.tsx  Login.test.tsx  Monitor.test.tsx  Workspaces.test.tsx
orchestrator/: Dockerfile  README.md  alembic.ini  pyproject.toml
orchestrator/migrations/: env.py
orchestrator/migrations/versions/: 0001_init.py  0002_oauth.py  0003_workspace_error.py
orchestrator/src/orchestrator/: cli.py  deps.py  main.py
orchestrator/src/orchestrator/core/: config.py  db.py  security.py
orchestrator/src/orchestrator/models/: __init__.py  audit_log.py  base.py  oauth_account.py  refresh_token.py  template.py  user.py  workspace.py  workspace_owner.py
orchestrator/src/orchestrator/routers/: audit.py  auth.py  health.py  me.py  oauth.py  verify.py  workspaces.py
orchestrator/src/orchestrator/schemas/: audit.py  auth.py  oauth.py  workspace.py
orchestrator/src/orchestrator/services/: audit_sink.py  compose_runner.py  oauth_linker.py  oauth_provider.py  port_allocator.py  reaper.py  workspace_compose.py  workspace_lifecycle.py
orchestrator/tests/: conftest.py
orchestrator/tests/integration/: test_audit_ingest.py  test_auth_flow.py  test_migration_oauth.py  test_migration_workspace_error.py  test_migrations.py  test_oauth_flow.py  test_openapi.py  test_port_allocator.py  test_real_start.py  test_reaper.py  test_verify.py  test_workspaces.py
orchestrator/tests/unit/: test_cli.py  test_compose_runner.py  test_config.py  test_health.py  test_oauth_account_model.py  test_oauth_linker.py  test_oauth_provider.py  test_oauth_schemas.py  test_security.py  test_workspace_compose_render.py  test_workspace_lifecycle_error.py  test_workspace_state_machine.py
specs/001-sandbox-p1-stack/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sandbox-p1-stack/checklists/: requirements.md
specs/001-sandbox-p1-stack/contracts/: cap-agent-api.md  cap-mcp-tools.md  cap-terminal-api.md  nginx-routes.md
specs/002-sandbox-p2-orchestrator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-sandbox-p3-launcher/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  pyproject.toml
tests/e2e/: test_base_images.py  test_browser_navigate.py  test_fs_roundtrip.py  test_health.py  test_nginx_502.py  test_nginx_websocket.py  test_p1_regression.py  test_p1p2_regression.py  test_p2_full_flow.py  test_p2_isolation.py  test_p3_oauth_flow.py  test_p3_real_start.py  test_perf_scs.py  test_resilience.py  test_screenshot.py  test_shell_roundtrip.py  test_static_apps.py
(+10 files in other folders)
