[project]
name = "cap-agent"
version = "0.1.0"
description = "AI 个人沙箱 cap-agent：FastAPI 业务编排（鉴权/CDP/GUI/业务路由）"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pyautogui>=0.9.54",
    "pillow>=10.4.0",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cap_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = ["integration: 跨服务集成测试", "unit: 纯单元测试"]

[tool.coverage.run]
source = ["src/cap_agent"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__."]
