[project]
name = "cap-mcp"
version = "0.1.0"
description = "AI 个人沙箱 cap-mcp：MCP server（FastAPI 占位，US2/US3 扩展 fastmcp/playwright）"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "fastmcp-slim[server]>=3.0.0",
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "cryptography>=48.0.0,<49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cap_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = ["integration: 跨服务集成测试", "unit: 纯单元测试"]

[tool.coverage.run]
source = ["src/cap_mcp"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__."]
