[project]
name = "cap-terminal"
version = "0.1.0"
description = "AI 个人沙箱 cap-terminal：FastAPI shell 共享与执行 API"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "libtmux>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cap_terminal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers -p no:libtmux"
markers = ["integration: 跨服务集成测试", "unit: 纯单元测试"]

[tool.coverage.run]
source = ["src/cap_terminal"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__."]
