[project]
name = "orchestrator"
version = "0.1.0"
description = "AI 个人沙箱 Orchestrator：多租户 workspace 编排 + JWT 认证 + 审计（P2）"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "typer>=0.14.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres]>=4.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[project.scripts]
orchestrator = "orchestrator.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = ["integration: 跨服务/DB 集成测试（需 testcontainers）", "unit: 纯单元测试"]

[tool.coverage.run]
source = ["src/orchestrator"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__."]
