[project]
name = "sandbox-e2e"
version = "0.1.0"
description = "AI 个人沙箱 P1 顶层 E2E 测试（打 cap-nginx:80）"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["e2e"]

[tool.pytest.ini_options]
testpaths = ["e2e"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "smoke: 基础健康检查（必跑）",
    "shell: shell_exec 端到端",
    "browser: browser_* 工具",
    "fs: 文件读写",
    "gui: GUI 桌面操作",
]
